13.K8s.Helm/joomla.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-joomla
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "joomla.k8s-8.sa"
      
spec:
  rule:
    - host: joomla.k8s-7.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sa-joomla
                port:
                  number: 80
